[package]
name = "solana_switchboard_attestation_program_sdk"
version = "0.1.0"
edition = "2021"
description = "A Rust library to interact with Switchboard V3 attestations."
readme = "README.md"
keywords = ["switchboard", "oracle", "solana"]
homepage = "https://docs.switchboard.xyz"
repository = "https://github.com/switchboard-xyz"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_switchboard_attestation_program_sdk"
doctest = false

[dependencies]
anchor-lang = { version = "0.27.0", features = ["init-if-needed"] }
sgx-quote = "0.1.0"
bytemuck = "1.7.2"
digest = { version = "0.9", default-features = false }
hex = "0.4.3"
sha2 = "0.10.6"
solana-program = "1.15.2"
base64 = "0.21.0"

[features]
default = ["cpi"]
no-entrypoint = []
cpi = ["no-entrypoint"]
